--- a/EDA_Final_Draft.Rmd
+++ b/EDA_Final_Draft.Rmd
@@ -36,7 +36,7 @@ Fist prepare the environment for our research project, and load raw annual datas
 
 ```{r}
 # Set Working Directory 
-setwd("/Users/gracesong/Library/Mobile Documents/com~apple~CloudDocs/Documents/Emory/QTM 302W/EDA_project/data")
+setwd("/Users/gracesong/Documents/GitHub/qtm302w-EDA/data")
 
 # Load the 2015-2019 dataset
 data_2015 <- read.csv("IHME_USA_DIABETES_COUNTY_RACE_ETHN_2000_2019_MX_2015_BOTH_Y2025M02D10.csv")
